# samyama-graph

./: .dockerignore  .env.example  .gitignore  BENCHMARKS.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREATE_IMPLEMENTATION.md  Cargo.toml  Dockerfile  FEASIBILITY_AND_PLAN.md  FUTURE_FEATURES.md  LICENSE  PHASE10_PLAN.md  PHASE11_PLAN.md  PHASE5_PLAN.md  PHASE5_SUMMARY.md  PHASE6_PLAN.md  PHASE6_SUMMARY.md  PHASE7_PLAN.md  PHASE7_SUMMARY.md  PHASE8_PLAN.md  PHASE9_PLAN.md  README.md  ROADMAP.md  ROADMAP_NEXT.md  SECURITY.md  deny.toml  lib.rs  project_overview.txt
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: gpu-ci.yml  publish-crate.yml  publish-docker.yml
api/: openapi.yaml
api-gateway/: README.md  index.js  package.json
banking_data/data/: IDENTITY  LOG  OPTIONS-000007
benches/: bench_setup.rs  full_benchmark.rs  graph_benchmarks.rs  graphalytics_benchmark.rs  ldbc_benchmark.rs  rao_family_benchmark.rs  vector_benchmark.rs
benches/finbench_common/: mod.rs
benches/ldbc_common/: mod.rs
case_studies/: .gitignore  DEFINITION_OF_DONE.md  README.md
case_studies/_lib/: demo_lib.py  fetch_snapshot.sh  record_gif.sh  run_case_study.sh  samyama_http.py  validate_queries.py
case_studies/bank-model-risk/: README.md  case.env  demo.cast  demo.py  queries.cypher
case_studies/cricket/: README.md  case.env  demo.cast  demo.py  queries.cypher  run.sh
case_studies/dbms-research/: README.md  case.env  (+4 more)
cli/: Cargo.toml
cli/src/: main.rs
crates/samyama-gpu/: Cargo.toml  PORT-STATUS.md
crates/samyama-gpu/src/: aggregate.rs  buffer.rs  cdlp.rs  context.rs  error.rs  lcc.rs  lib.rs  pagerank.rs  pca.rs  runtime.rs  sort.rs  topology.rs  unified.rs  vector.rs
crates/samyama-gpu/src/cuda/: aggregate.rs  cdlp.rs  kernels.rs  lcc.rs  mod.rs  pagerank.rs  sort.rs  topology.rs  vector.rs
crates/samyama-gpu/src/shaders/: aggregate.wgsl  bitonic_sort.wgsl  cdlp.wgsl  cosine_distance.wgsl  inner_product.wgsl  lcc.wgsl  pagerank.wgsl  pca_center.wgsl  pca_covariance.wgsl  pca_mean.wgsl  pca_power_iter.wgsl  pca_power_iter_norm.wgsl  triangles.wgsl
crates/samyama-gpu/tests/: gpu_smoke.rs
crates/samyama-graph-algorithms/: Cargo.toml  README.md
crates/samyama-graph-algorithms/examples/: e1_ablation.rs  e3a_um_vs_copy.rs
crates/samyama-graph-algorithms/src/: cdlp.rs  common.rs  community.rs  flow.rs  gpu_dispatch.rs  gpu_parity_tests.rs  lcc.rs  lib.rs  mst.rs  pagerank.rs  pathfinding.rs  pca.rs  topology.rs
crates/samyama-optimization/: Cargo.toml  README.md
crates/samyama-optimization-python/: Cargo.toml  pyproject.toml
crates/samyama-optimization-python/src/: lib.rs
crates/samyama-optimization/examples/: run_baseline_suite.rs
crates/samyama-optimization/src/: common.rs  lib.rs  moo.rs
crates/samyama-optimization/src/algorithms/: abc.rs  bat.rs  bmr.rs  bmwr.rs  bwr.rs  cuckoo.rs  de.rs  ehrjaya.rs  firefly.rs  fpa.rs  ga.rs  gotlbo.rs  gsa.rs  gwo.rs  hs.rs  itlbo.rs  jaya.rs  mo_bmwr_family.rs  mo_rao_de.rs  mod.rs  motlbo.rs  nsga2.rs  pso.rs  qo_rao.rs  qojaya.rs  rao.rs  sa.rs  samp_jaya.rs  saphr.rs  tlbo.rs
crates/samyama-optimization/src/benchmarks/: cec_data.rs  mod.rs  multi_objective.rs  runner.rs  single_objective.rs
crates/samyama-optimization/tests/: test_benchmark_optima.rs  test_solvers.rs
crates/samyama-sdk/: Cargo.toml
crates/samyama-sdk/src/: algo.rs  client.rs  embedded.rs  error.rs  lib.rs  models.rs  remote.rs  vector_ext.rs
deployment/: README.md  api-gateway.service  nginx-api-gateway.conf
docs/: ACID_GUARANTEES.md  AGENCY_ENRICHMENT_PROPOSAL.md  ARCHITECTURE.md  ARCHITECTURE_ROADMAP.md  BENCHMARK_COMPARISON.md  CYPHER_COMPATIBILITY.md  GLOSSARY.md  GNN_PROPOSAL.md  LDBC_BENCHMARK.md  README.md  REQUIREMENTS.md  SDK_API_CLI_ARCHITECTURE.md  SUPPLY_CHAIN_GUARDIAN_DEMO.md  TECHNOLOGY_COMPARISONS.md  TECH_STACK.md  TROUBLESHOOTING.md
examples/: aact_biomarker_extractor.rs  agent_demo.rs  agentic_enrichment_demo.rs  amr_stewardship_demo.rs  auto_embed_demo.rs  auto_rag_demo.rs  b3_runner.rs  banking_demo.rs  civic_loader.rs  clinical_trial_sites_demo.rs  clinical_trials_demo.rs  cluster_demo.rs  cricket_loader.rs  cyber_security_demo.rs  cypher_problem_demo.rs  cypher_query_runner.rs  drug_repurposing_demo.rs  druginteractions_loader.rs  enterprise_soc_demo.rs  explain_aggs.rs  finbench_benchmark.rs  finbench_loader.rs  football_loader.rs  full_benchmark.rs  graph_optimization_benchmark.rs  graph_rag_demo.rs  graphalytics_benchmark.rs  grid_dispatch_demo.rs  healthcare_allocation_demo.rs  healthcare_demo.rs  hgnc_ensembl_loader.rs  imdb_loader.rs  industrial_kg_demo.rs  knowledge_graph_demo.rs  late_materialization_bench.rs  ldbc_benchmark.rs  ldbc_bi_benchmark.rs  ldbc_loader.rs  legal_judgments_loader.rs  mvcc_benchmark.rs  (+31 more)
graph/: mod.rs
persistence/: storage.rs  wal.rs
query/: ast.rs
raft/: network.rs  node.rs
scripts/: README.md  coverage.sh  distributed_test.sh  download_finbench.sh  download_graphalytics.sh  download_ldbc_snb.sh  enrich_clinical_trials.py  regression-test.sh  run_all_examples.sh
sdk/python/: .gitignore  Cargo.toml  pyproject.toml
sdk/python/samyama_mcp/: __init__.py
sdk/python/src/: lib.rs
sdk/python/tests/: test_embedded.py  test_vector.py
src/: lib.rs  main.rs
tests/: advanced_aggregations.rs  advanced_cypher.rs  age_plan_executor_test.rs  ai_features_test.rs  algo_integration_test.rs  algo_test.rs  comprehensive_test.rs  distributed_client.py  ds07_mixed_tier_test.rs  exists_subquery_test.rs  index_test.rs  multi_objective_test.rs  mvcc_test.rs  optimization_test.rs  optimize_http_test.rs  sharding_test.rs  snapshot_persistence.rs  target_node_filter_test.rs  tenant_registry_unification.rs  uc1_trial_site_selection_test.rs  uc2_combo_dosing_test.rs  uc3_capacity_planning_test.rs  uc4_kg_completion_test.rs  uc5_agent_routing_test.rs  v060_features_test.rs  vector_query_test.rs  vector_search_test.rs
(+240 files in other folders)
