[package]
name = "samyama"
version = "0.1.0"
edition = "2021"
authors = ["Samyama Graph Database Team"]
description = "High-performance distributed graph database with OpenCypher support"
license = "Apache-2.0"
repository = "https://github.com/VaidhyaMegha/samyama-graph"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = "2.1"
thiserror = "1.0"
anyhow = "1.0"

# Query parsing
pest = "2.7"
pest_derive = "2.7"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
bytes = "1.5"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Persistence (Phase 3)
rocksdb = { version = "0.22", default-features = false, features = ["lz4", "zstd"] }
bincode = "1.3"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
