[package]
name = "samyama"
version = "0.1.0"
edition = "2021"
authors = ["Samyama Graph Database Team"]
description = "High-performance distributed graph database with OpenCypher support"
license = "Apache-2.0"
repository = "https://github.com/VaidhyaMegha/samyama-graph"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = "2.1"
thiserror = "1.0"
anyhow = "1.0"

# Query parsing
pest = "2.7"
pest_derive = "2.7"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
bytes = "1.5"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Persistence (Phase 3)
rocksdb = { version = "0.22", default-features = false, features = ["lz4", "zstd"] }
bincode = "1.3"
chrono = "0.4"

# High Availability (Phase 4)
openraft = { version = "0.9", features = ["serde"] }
async-trait = "0.1"
serde_yaml = "0.9"

# RDF/SPARQL Support (Phase 5)
oxrdf = "0.2"              # RDF primitives (IRI, Literal, Triple, Quad)
oxiri = "0.2"              # IRI handling
rio_api = "0.8"            # RDF I/O API
rio_turtle = "0.8"         # Turtle parser/serializer
rio_xml = "0.8"            # RDF/XML parser/serializer
spargebra = "0.3"          # SPARQL 1.1 parser
sparesults = "0.2"         # SPARQL results formats
axum = "0.7"               # HTTP framework for SPARQL endpoint
tower = "0.4"              # Middleware
tower-http = "0.5"         # HTTP utilities
percent-encoding = "2.3"   # URL encoding
mime = "0.3"               # MIME types

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
