[package]
name = "samyama-graph-algorithms"
version = "0.2.1"
edition = "2021"
authors = ["Samyama Graph Database Team"]
description = "Graph algorithms (PageRank, WCC, BFS, Dijkstra) for Samyama Graph Database"
license = "Apache-2.0"
repository = "https://github.com/samyama-ai/samyama-graph"
keywords = ["graph", "algorithms", "pagerank", "bfs", "wcc"]
categories = ["algorithms", "science"]
readme = "README.md"

[dependencies]
# No heavy dependencies needed for pure topology
serde = { version = "1.0", features = ["derive"], optional = true }