[package]
name = "samyama-graph-algorithms"
version = "1.7.0"
edition = "2021"
authors = ["Samyama Graph Database Team"]
description = "Graph algorithms (PageRank, WCC, BFS, Dijkstra) for Samyama Graph Database"
license = "Apache-2.0"
repository = "https://github.com/samyama-ai/samyama-graph"
keywords = ["graph", "algorithms", "pagerank", "bfs", "wcc"]
categories = ["algorithms", "science"]
readme = "README.md"

[dependencies]
# No heavy dependencies needed for pure topology
serde = { version = "1.0", features = ["derive"], optional = true }
ndarray = "0.15"
rand = "0.8"
rayon = "1.10"
# GPU backend (optional; enabled via this crate's `gpu` feature)
samyama-gpu = { path = "../samyama-gpu", version = "1.1.0", optional = true }
# Fallback logging for the GPU dispatch gates (gpu-gated, so default builds stay dep-free)
tracing = { version = "0.1", optional = true }

[features]
default = []
# GPU-accelerated dispatch for PageRank/CDLP/LCC/TriangleCount. The CPU paths remain
# the source of truth; GPU is an opt-in fast path with transparent CPU fallback.
gpu = ["dep:samyama-gpu", "dep:tracing"]
# NVIDIA CUDA fast path + unified-memory (implies gpu). Requires a CUDA toolkit.
cuda = ["gpu", "samyama-gpu/cuda"]
# Wire the previously-dead optional `serde` dep to an explicit feature.
serde = ["dep:serde"]

# Paper 22 GPU experiment runners — only build under the `gpu` feature (they use
# `gpu_dispatch`), so a default `cargo build/test --workspace` skips them cleanly.
[[example]]
name = "e1_ablation"
required-features = ["gpu"]

[[example]]
name = "e3a_um_vs_copy"
required-features = ["gpu"]