[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "samyama-optimization"
version = "0.1.0"
description = "High-performance metaheuristic optimization algorithms (Rao, Jaya, TLBO) in Rust"
authors = [
    { name = "Sandeep Kunkunuru", email = "sandeep@samyama.ai" }
]
license = { text = "Apache-2.0" }
dependencies = [
    "numpy>=1.20",
]
requires-python = ">=3.8"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "samyama_optimization"
