[package]
name = "samyama-optimization"
version = "0.3.6"
edition = "2021"
authors = ["Sandeep Kunkunuru <sandeep@samyama.ai>"]
description = "High-performance metaheuristic optimization algorithms (Jaya, Rao, TLBO, BMR, BWR, QOJaya, ITLBO) in Rust."
license = "Apache-2.0"
repository = "https://github.com/VaidhyaMegha/optimization_algorithms"
keywords = ["optimization", "metaheuristic", "genetic-algorithm", "operations-research", "solver"]
categories = ["algorithms", "science", "mathematics"]
readme = "README.md"

[dependencies]
rand = "0.8"
rayon = "1.8"
ndarray = { version = "0.15", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
rand_distr = "0.4"

[dev-dependencies]
criterion = "0.5"
