[workspace]

[package]
name = "samyama-python"
version = "0.5.0-alpha.1"
edition = "2021"
authors = ["Samyama Graph Database Team"]
description = "Python bindings for the Samyama Graph Database SDK"
license = "Apache-2.0"

[lib]
name = "samyama"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
samyama-sdk = { path = "../../crates/samyama-sdk", version = "0.5.0-alpha.1" }
tokio = { version = "1.35", features = ["rt-multi-thread"] }
serde_json = "1.0"
